--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gochi+Hand&family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap" rel="stylesheet">
+
+    <!--bootstrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 
     <!-- css -->
     <link rel="stylesheet" href="style.css">
@@ -67,10 +70,37 @@
 
 
     <!-- inicio de carrusel -->
-    <section id="carrusel">
+    <section class="carrusel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
 
-        <img src="Multimedia/imagenes/carrusel.jpg" alt="viajeros tatto">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
 
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/multimedia/imagenes/carrusel.jpg" class="d-block w-100 h-100" alt="viajeros tattoo">
+                </div>
+                <div class="carousel-item">
+                    <img src="/multimedia/imagenes/carrusel-1.jpg" class="d-block w-100 h-100" alt="viajeros tattoo">
+                </div>
+                <div class="carousel-item">
+                    <img src="/multimedia/imagenes/carrusel-2.png" class="d-block w-100 h-100" alt="viajeros tattoo">
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </section>
     <!-- fin de carrusel -->
 
@@ -264,6 +294,7 @@
         </footer>
 
     <!-- fin del footer -->
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
